[build-system]
build-backend = "hatchling.build"
requires = [ "hatch-requirements-txt", "hatchling", "xpip-build>=1.4",]

[project]
classifiers = [ "Programming Language :: Python", "Programming Language :: Python :: 3",]
description = "Logging module"
dynamic = [ "dependencies", "version",]
keywords = [ "colorama", "colorlog", "logger", "logging",]
license-files = [ "LICENSE",]
name = "xkits-logger"
requires-python = ">=3.8"
[[project.authors]]
name = "Mingzhe Zou"
email = "zoumingzhe@outlook.com"

[project.readme]
content-type = "text/markdown"
file = "readme.md"

[project.scripts]

[project.urls]
Homepage = "https://github.com/bondbox/xlogger/"

[tool.hatch.version]
path = "xkits_logger/attribute.py"

[tool.hatch.build.targets.sdist]
exclude = [ "xkits_logger/unittest",]
packages = [ "xkits_logger",]

[tool.hatch.build.targets.wheel]
exclude = [ "xkits_logger/unittest",]
packages = [ "xkits_logger",]

[tool.hatch.metadata.hooks.requirements_txt]
files = [ "requirements.txt",]

[tool.hatch.build.targets.sdist.force-include]

[tool.hatch.build.targets.wheel.force-include]
